example/secondfile/objects/Service_Provider_Salesforce_Org_Details__c.object
<CustomObject>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Provider Salesforce Org Details</relationshipLabel>
        <relationshipName>Service_Provider_Salesforce_Org_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <label>Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <externalId>true</externalId>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Provider Salesforce Org Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Salesforce Org Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>